--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
     <span class="loader"></span>
     <ul class="list_gallery"></ul>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
